--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@qwiky/hooks",
+  "version": "0.0.0",
   "main": "./dist/index.qwik.mjs",
   "qwik": "./dits/index.qwik.mjs",
   "types": "./dist/types/index.d.ts",
@@ -27,7 +28,7 @@
     "lint:fix": "pnpm run lint --fix"
   },
   "peerDependencies": {
-    "@builder.io/qwik": "1.0.0"
+    "@builder.io/qwik": ">=1.0.0"
   },
   "devDependencies": {
     "@types/eslint": "8.37.0",
