--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qwiky/hooks",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "./dist/index.qwik.mjs",
   "qwik": "./dits/index.qwik.mjs",
   "types": "./dist/types/index.d.ts",
@@ -25,6 +25,7 @@
     "build": "vite build --mode lib",
     "dev": "vite build --mode lib --watch",
     "lint": "eslint \"src/**/*.ts*\"",
+    "release": "np --no-yarn",
     "lint:fix": "pnpm run lint --fix"
   },
   "peerDependencies": {
@@ -37,10 +38,12 @@
     "@typescript-eslint/parser": "5.59.1",
     "eslint": "8.39.0",
     "eslint-plugin-qwik": "latest",
-    "np": "7.6.1",
     "prettier": "2.8.8",
     "typescript": "5.0.4",
     "undici": "5.22.0",
     "vite": "4.3.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
